# voidvalley

./: .gitignore  Cargo.toml  LICENSE  vision.md
crates/fishtank-cli/: Cargo.toml
crates/fishtank-cli/src/: main.rs
crates/fishtank-core/: Cargo.toml
crates/fishtank-core/src/: lib.rs
crates/fishtank-protocol/: Cargo.toml
crates/fishtank-protocol/src/: lib.rs
crates/fishtank-server/: Cargo.toml
crates/fishtank-server/src/: main.rs
docs/: README.md  agent-interface.md  architecture.md  design-notes.md  later-ideas.md  protocols.md  realtime-viewer.md  roadmap.md  simulation-core.md  skills-and-onboarding.md  wakeups-and-notifications.md  world-model.md
specs/: rust-core.md
worlds/: village.json
