[workspace]
members = [
    "crates/fishtank-cli",
    "crates/fishtank-core",
    "crates/fishtank-protocol",
    "crates/fishtank-server",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/openai/fishtank"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["json"] }
clap = { version = "4.5", features = ["derive", "env"] }
fishtank-core = { path = "crates/fishtank-core" }
fishtank-protocol = { path = "crates/fishtank-protocol" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
schemars = { version = "1.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.23"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "macros", "serde"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "time", "fs"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
