[package]
name = "fishtank-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "fishtank"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
fishtank-protocol.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
